--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -101,7 +101,7 @@
 			}
 			var totalPage;
 			var showArray = [];
-			show_list.initFresh();
+			show_list1.initFresh();
 			mui.init();
 			mui.plusReady(function() {
 				show_list1.getShowList(showCity, document.getElementById("list-container"), show_list1.setShowList);
