--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -34,7 +34,7 @@
 		<script src="../../js/publicMicroClass.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
-			course_list.initFresh();
+			course_list1.initFresh();
 			var freshContainer;
 			var freshFlag = 0; //0默认 1下拉刷新 2上拉加载
 			var pageFlag = 0; //关注0，全部1
