--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -1,62 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<meta charset="utf-8">
+		<title>Hello MUI</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<link rel="stylesheet" href="../../css/mui.min.css">
+		<link rel="stylesheet" href="../../css/utils/fresh.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/utils/common.css"/>
+		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <h1 class="mui-title">全部</h1>
+			<h1 class="mui-title"></h1>
 		</header>
 		<div class="mui-content">
-		    <ul class="mui-table-view mui-grid-view mui-grid-9">
-		    <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-		        <a href="#">
-		            <span class="mui-icon mui-icon-home"></span>
-		            <div class="mui-media-body">Home</div>
-		        </a>
-		    </li>
-		    <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-		        <a href="#">
-		            <span class="mui-icon mui-icon-email"><span class="mui-badge mui-badge-red">5</span></span>
-		            <div class="mui-media-body">Email</div>
-		        </a>
-		    </li>
-		    <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-		        <a href="#">
-		            <span class="mui-icon mui-icon-chatbubble"></span>
-		            <div class="mui-media-body">Chat</div>
-		        </a>
-		    </li>
-		    <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-		        <a href="#">
-		            <span class="mui-icon mui-icon-location"></span>
-		            <div class="mui-media-body">Location</div>
-		        </a>
-		    </li>
-		    <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-		        <a href="#">
-		            <span class="mui-icon mui-icon-search"></span>
-		            <div class="mui-media-body">Search</div>
-		        </a>
-		    </li>
-		    <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3">
-		        <a href="#">
-		            <span class="mui-icon mui-icon-phone"></span>
-		            <div class="mui-media-body">Phone</div>
-		        </a>
-		    </li>
-		        </ul>
-		    
+			<div id="slider" class="mui-slider mui-fullscreen">
+				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div class="mui-scroll">
+						<a class="mui-control-item " href="#course-attended">
+							关注
+						</a>
+						<a class="mui-control-item mui-active" href="#course-all">
+							全部
+						</a>
+					</div>
+				</div>
+				<div class="mui-slider-group">
+					<div id="course-attended" class="mui-slider-item mui-control-content mui-active">
+						<div id="scroll1" class="mui-scroll-wrapper">
+							<div class="mui-scroll">
+								<ul class="mui-table-view">
+									<li >关注</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div id="course-all" class="mui-slider-item mui-control-content">
+						<div class="mui-scroll-wrapper">
+							<div class="mui-scroll">
+								<ul class="mui-table-view">
+									<li>全部</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
+		<script src="../../js/mui.pullToRefresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.material.js"></script>
+		<script>
+			mui.init();
+			(function($) {
+				//阻尼系数
+				var deceleration = mui.os.ios?0.003:0.0009;
+				$('.mui-scroll-wrapper').scroll({
+					bounce: false,
+					indicators: true, //是否显示滚动条
+					deceleration:deceleration
+				});
+				$.ready(function() {
+					//循环初始化所有下拉刷新，上拉加载。
+					$.each(document.querySelectorAll('.mui-slider-group .mui-scroll'), function(index, pullRefreshEl) {
+						$(pullRefreshEl).pullToRefresh({
+							down: {
+								callback: function() {
+									var self = this;
+									setTimeout(function() {
+										var ul = self.element.querySelector('.mui-table-view');
+//										ul.insertBefore(createFragment(ul, index, 10, true), ul.firstChild);
+										self.endPullDownToRefresh();
+									}, 1000);
+								}
+							},
+							up: {
+								callback: function() {
+									var self = this;
+									setTimeout(function() {
+										var ul = self.element.querySelector('.mui-table-view');
+//										ul.appendChild(createFragment(ul, index, 5));
+										self.endPullUpToRefresh();
+									}, 1000);
+								}
+							}
+						});
+					});
+					var createFragment = function(ul, index, count, reverse) {
+						var length = ul.querySelectorAll('li').length;
+						var fragment = document.createDocumentFragment();
+						var li;
+						for (var i = 0; i < count; i++) {
+							li = document.createElement('li');
+							li.className = 'mui-table-view-cell';
+							li.innerHTML = '第' + (index + 1) + '个选项卡子项-' + (length + (reverse ? (count - i) : (i + 1)));
+							fragment.appendChild(li);
+						}
+						return fragment;
+					};
+				});
+			})(mui);
 		</script>
 	</body>
 
