--- a/JiaoBaoYun-hb/html/micro-course/history-records.html
+++ b/JiaoBaoYun-hb/html/micro-course/history-records.html
@@ -700,6 +700,7 @@
 								
 							}
 							if(pageIndex >= data.RspData.totalPage) {
+								mui(".mui-pull-loading")[0].innerHTML = "";
 								console.log('没有下一页');
 
 								//								document.getElementById("section_more").style.display = "none";
