--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -471,7 +471,7 @@
 						document.getElementById("collapse_content_li").className = "mui-table-view-cell mui-collapse";
 						showTopData(sectionData.value[ids[1]]);
 						this.className = this.className + " section-show";
-						mui("#content").scroll().scrollTo(0, 0, 0);
+						mui("#scroll_wrapper").scroll().scrollTo(0, 0, 0);
 					}
 				});
 
@@ -691,13 +691,18 @@
 					console.log('3 获取课程的节次 ' + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						//---假数据---start
-//						data.RspData.Data[0].SecStatus = 0;
-//						data.RspData.Data[0].EncType = 1;
-//						data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
-						//data.RspData.Data[0].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
-//						data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/1495419146278732.mp4";
-//						data.RspData.Data[0].EncLen = 10;
-//						data.RspData.Data[0].LikeNum = 10;
+						data.RspData.Data[0].SecStatus = 0;
+						data.RspData.Data[0].EncType = 2;
+						data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+						data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3";
+						data.RspData.Data[0].EncLen = 10;
+						data.RspData.Data[0].LikeNum = 10;
+						data.RspData.Data[1].SecStatus = 0;
+						data.RspData.Data[1].EncType = 1;
+						data.RspData.Data[1].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+						data.RspData.Data[1].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
+						data.RspData.Data[1].EncLen = 10;
+						data.RspData.Data[1].LikeNum = 10;
 						//---假数据---end
 						pageIndex = index;
 						if(data.RspData.Data.length != 0) {
