--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -37,7 +37,7 @@
 				<span class="mui-icon iconfont icon-jiaoyu1"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
-			<a id="bottom-show" class="mui-tab-item" href="../show/show_home.html">
+			<a id="bottom-show" class="mui-tab-item" href="../show/show-home1.html">
 				<span class="mui-icon iconfont icon-dongtai"></span>
 				<span class="mui-tab-label">展现</span>
 			</a>
