--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -160,16 +160,16 @@
 
 			.section-image-play {
 				/*视频播放按钮*/
-				width: 55px;
-				height: 55px;
+				width: 40px;
+				height: 40px;
 			}
 
 			.section-image-time {
 				/*视频的时间*/
 				position: absolute;
 				color: white;
-				top: 85%;
-				right: 5%;
+				top: 80%;
+				right: 7%;
 			}
 
 			.section-comment-info,
@@ -188,8 +188,19 @@
 				fill: none;
 			}
 
+			.section-audio-icon {
+				fill: none;
+				stroke-width: 2px;
+			}
+
 			.section-list-audio-icon {
 				stroke: #B7B7B7;
+				fill: none;
+				stroke-width: 2px;
+			}
+
+			.section-list-audio-icon-white {
+				stroke: white;
 				fill: none;
 				stroke-width: 2px;
 			}
@@ -292,12 +303,14 @@
 				color: #00A5E0;
 			}
 
-			.section-comment-zan {
+			.section-comment-zan,
+			.section-zan {
 				/*点赞*/
 				color: #1db8f1;
 			}
 
-			.section-comment-notzan {
+			.section-comment-notzan,
+			.section-zan {
 				/*不点赞*/
 				color: #dbdbdb;
 			}
@@ -308,17 +321,28 @@
 				top: 45px;
 			}
 
-			.video-and-img {
+			.video-area {
 				/*视频区域*/
 				display: none;
 			}
 
-			.video-and-img video {
+			.video-area video {
 				position: absolute;
 				top: 45px;
 				z-index: 2;
 				width: 100%;
 				background-color: black;
+			}
+
+			.audio-area {
+				/*音频区域*/
+				display: none;
+				position: absolute;
+				z-index: 2;
+				background-color: white;
+				width: 100%;
+				top: 45px;
+				height: 100px;
 			}
 		</style>
 	</head>
@@ -335,7 +359,29 @@
 			</a>
 		</nav>
 		<div id="content" class="mui-content">
-			<div id="video_and_img" class="video-and-img">
+			<div id="audio_area" class="audio-area">
+				<div id="audio_area_svg" style="margin-top: 28px;padding-left: 14px;">
+					<svg class="section-list-audio">
+						<path class="section-list-audio-border" d="M8 45 C13 40 15 38 15 25 L15 21 Q15 1 36 1 L300 1 Q325 1 325 21 Q325 41 300 41 L30 41 Q15 41 12 43 L8 45 Z" style="fill: #1DB8F1;" />
+						<rect width="320px" height="50px" x="8" y="0" style="fill: white;">
+							<animate attributeName="x" from="8" to="325" begin="0s" dur="20s" repeatCount="1" />
+						</rect>
+						<path class="section-list-audio-border" d="M8 45 C13 40 15 38 15 25 L15 21 Q15 1 36 1 L300 1 Q325 1 325 21 Q325 41 300 41 L30 41 Q15 41 12 43 L8 45 Z" />
+						<path class="section-list-audio-icon" d="M30 18 A5 5 0 0 1 30 23">
+							<animate attributeName="stroke" from="white" to="#B7B7B7" begin="0s" dur="1s" repeatCount="20" />
+						</path>
+						<path class="section-list-audio-icon" d="M35 14 A10 10 0 0 1 35 27">
+							<animate attributeName="stroke" from="white" to="#B7B7B7" begin="0s" dur="1s" repeatCount="20" />
+						</path>
+						<path class="section-list-audio-icon" d="M40 10 A 15 15 0 0 1 40 31">
+							<animate attributeName="stroke" from="white" to="#B7B7B7" begin="0s" dur="1s" repeatCount="20" />
+						</path>
+						<text class="section-list-audio-time" x="60" y="26">00:10</text>
+					</svg>
+				</div>
+				<!--<audio></audio>-->
+			</div>
+			<div id="video_area" class="video-area">
 				<video id="video" controls="controls" preload="metadata">
 					您的浏览器不支持video标签
 				</video>
@@ -359,7 +405,7 @@
 							</div>
 						</li>
 						<li class="mui-table-view-cell section-info">
-							<div id="section_top_zan" class="mui-icon iconfont icon-zanzan1">(0)</div>
+							<div id="section_top_zan" class="mui-icon iconfont icon-zanzan1"></div>
 							<div id="section_top_time" class="mui-pull-right"></div>
 						</li>
 					</ul>
@@ -626,8 +672,8 @@
 				img.parentNode.style.width = width + "px";
 				img.parentNode.style.height = height + "px";
 				img.parentNode.style.visibility = "visible";
-				img.style.marginLeft = parseInt((width - 55) / 2) + "px";
-				img.style.marginTop = parseInt((height - 55) / 2) + "px";
+				img.style.marginLeft = parseInt((width - 40) / 2) + "px";
+				img.style.marginTop = parseInt((height - 40) / 2) + "px";
 			}
 
 			/**
@@ -690,23 +736,23 @@
 				postDataMCPro_getAllSectionsByCourse(comData, wd, function(data) {
 					console.log('3 获取课程的节次 ' + JSON.stringify(data));
 					if(data.RspCode == 0) {
-						//---假数据---start
-						data.RspData.Data[0].SecStatus = 0;
-						data.RspData.Data[0].EncType = 2;
-						data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
-						data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3";
-						data.RspData.Data[0].EncLen = 10;
-						data.RspData.Data[0].LikeNum = 10;
-						data.RspData.Data[1].SecStatus = 0;
-						data.RspData.Data[1].EncType = 1;
-						data.RspData.Data[1].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
-						data.RspData.Data[1].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
-						data.RspData.Data[1].EncLen = 10;
-						data.RspData.Data[1].LikeNum = 10;
-						//---假数据---end
 						pageIndex = index;
 						if(data.RspData.Data.length != 0) {
 							if(index == 1) {
+								//---假数据---start
+								//																data.RspData.Data[0].SecStatus = 0;
+								//																data.RspData.Data[0].EncType = 2;
+								//																data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+								//																data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3";
+								//																data.RspData.Data[0].EncLen = 10;
+								//																data.RspData.Data[0].LikeNum = 10;
+								//																data.RspData.Data[1].SecStatus = 0;
+								//																data.RspData.Data[1].EncType = 1;
+								//																data.RspData.Data[1].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+								//																data.RspData.Data[1].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
+								//																data.RspData.Data[1].EncLen = 10;
+								//																data.RspData.Data[1].LikeNum = 10;
+								//---假数据---end
 								showTopData(data.RspData.Data[0], wd);
 							}
 							showSectionList(data.RspData.Data);
@@ -740,7 +786,7 @@
 					document.getElementById("section_shield").style.display = 'flex';
 					document.getElementById("section_comment_title").style.display = "none";
 					document.getElementById("section_comment_list").style.display = "none";
-					showOrHiddenVideo(0);
+					showOrHiddenVideoAudio(0);
 					if(wd) {
 						wd.close();
 					}
@@ -754,8 +800,8 @@
 					document.getElementById("section_top_zan").innerHTML = "(" + data.LikeNum + ")";
 					document.getElementById("section_top_time").innerHTML = "上传时间 : " + data.UpTime.split(" ")[0];
 					document.getElementById("section_comment_list").innerHTML = "";
-					//视频区域
-					showOrHiddenVideo(data.EncType, data.EncAddr);
+					//视频音频区域
+					showOrHiddenVideoAudio(data.EncType, data.EncAddr, data.EncLen);
 					//加载评论列表
 					showCommentsFirst(data.Comments, wd);
 				}
@@ -769,6 +815,7 @@
 				//console.log("showSectionList " + JSON.stringify(data));
 				var more = document.getElementById("section_more");
 				for(var i in data) {
+					data[i].SecStatus = 0;
 					sectionData.key[sectionData.key.length] = data[i].SecId;
 					sectionData.value[data[i].SecId] = data[i];
 					//console.log("showSectionList " + i + " " + JSON.stringify(data[i]));
@@ -984,22 +1031,36 @@
 
 			/**
 			 * 显示或隐藏视频区域
-			 * @param {int} type 1,显示视频区域
+			 * @param {int} type 1,显示视频区域;2,显示音频区域;
 			 */
-			function showOrHiddenVideo(type, fpath) {
-				//console.log("showOrHiddenVideo " + type);
+			function showOrHiddenVideoAudio(type, fpath, time) {
+				console.log("showOrHiddenVideoAudio " + type + " " + fpath + " " + time);
 				var video = document.getElementById("video");
-				if(type == 1) {
-					document.getElementById("scroll_wrapper").style.top = 45 + plus.screen.resolutionWidth * 162 / 360 + "px";
-					document.getElementById("video_and_img").style.display = "inline";
+				if(type == 1) { //视频
+					document.getElementById("scroll_wrapper").style.top = 44 + parseInt(plus.screen.resolutionWidth * 162 / 360) + "px";
+					document.getElementById("video_area").style.display = "inline";
+					document.getElementById("audio_area").style.display = "none";
 					video.src = fpath;
 					video.play();
+				} else if(type == 2) { //音频
+					document.getElementById("scroll_wrapper").style.top = "144px";
+					document.getElementById("video_area").style.display = "none";
+					document.getElementById("audio_area").style.display = "inline";
+					//document.getElementById("audio_area_svg").innerHTML = '';
+					console.log("getAudioBorderPath " + getAudioBorderPath(plus.screen.resolutionWidth - 60));
+					video.src = "";
+					video.pause();
 				} else {
 					document.getElementById("scroll_wrapper").style.top = "45px";
-					document.getElementById("video_and_img").style.display = "none";
+					document.getElementById("video_area").style.display = "none";
+					document.getElementById("audio_area").style.display = "none";
 					video.src = "";
 					video.pause();
 				}
+			}
+
+			function sectionLikeOrNot(data) {
+
 			}
 		</script>
 	</body>
