--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -76,6 +76,8 @@
 			document.getElementById("course-all").info = {
 				type: 1, //类型 1为全部 0为关注
 				pageIndex: 1, //页码
+				freshFlag: 0, //0刷新，1加载更多
+				courseArray: [],//课程
 				totalPage: 0 //总页码
 			};
 			//阻尼系数
@@ -83,7 +85,7 @@
 			mui.plusReady(function() {
 				mui.fire(plus.webview.getLaunchWebview(), "indexReady");
 				initFresh(document.getElementById("course-all"));
-				course_listnew.getData(1, 1, document.getElementById("course-all").querySelector(".mui-table-view"), course_listnew.setData)
+				course_listnew.getData(1, document.getElementById("course-all").info, document.getElementById("course-all").querySelector(".mui-table-view"), course_listnew.setData)
 				getAttendedClasses(toggleAttendedPart);
 				course_listnew.setListener();
 				addSlider();
@@ -146,9 +148,9 @@
 							setTimeout(function() {
 								var ul = self.element.querySelector('.mui-table-view');
 								ul.innerHTML = "";
-								freshConatiner.info.pageIndex = 1;
-								console.log("获取的fresh:" + JSON.stringify(freshConatiner.info))
-								course_listnew.getData(freshConatiner.info.type, freshConatiner.info.pageIndex, ul, course_listnew.setData);
+								freshConatiner.info.freshFlag = 0;
+								console.log("获取的fresh:" + JSON.stringify(freshConatiner.info));
+								course_listnew.getData(freshConatiner.info.type, freshConatiner.info, ul, course_listnew.setData);
 								self.endPullDownToRefresh();
 							}, 1000);
 						}
@@ -156,12 +158,23 @@
 					up: {
 						callback: function() {
 							var self = this;
-							setTimeout(function() {
+//							setTimeout(function() {
+//								var ul = self.element.querySelector('.mui-table-view');
+//								freshConatiner.info.freshFlag = 1;
+//								course_listnew.getData(freshConatiner.info.type, freshConatiner.info, ul, course_listnew.setData);
+//								self.endPullUpToRefresh();
+//							}, 1000);
+
+							console.log('我在底部pageIndex:' + freshConatiner.info.pageIndex + ':总页数:' + freshConatiner.info.totalPage);
+							if(freshConatiner.info.pageIndex < freshConatiner.info.totalPage) {
+								freshConatiner.info.freshFlag = 1;
 								var ul = self.element.querySelector('.mui-table-view');
-								freshConatiner.info.pageInex++;
-								course_listnew.getData(freshConatiner.info.type, freshConatiner.info.pageIndex, ul, course_listnew.setData);
+								course_listnew.getData(freshConatiner.info.type, freshConatiner.info, ul, course_listnew.setData);
 								self.endPullUpToRefresh();
-							}, 1000);
+							} else {
+								self.endPullUpToRefresh();
+								mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
+							}
 						}
 					}
 				});
@@ -207,11 +220,13 @@
 					if(!document.getElementById("course-attended")) {
 						sliderGroup.insertBefore(createAttendedFragment(), document.querySelector("#course-all"));
 						document.getElementById("course-attended").info = {
-							type: 0,//关注
-							pageIndex: 1,//页码
+							type: 0, //关注
+							pageIndex: 1, //页码
+							freshFlag: 0, //0刷新，1加载更多
+							courseArray: [],//课程
 							totalPage: 0 //总页码
 						};
-						course_listnew.getData(0, 1, document.getElementById("course-attended").querySelector(".mui-table-view"), course_listnew.setData)
+						course_listnew.getData(0, document.getElementById("course-attended").info, document.getElementById("course-attended").querySelector(".mui-table-view"), course_listnew.setData)
 						initFresh(document.getElementById("course-attended"));
 						setTitle(11);
 					}
