--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -283,12 +283,12 @@
 				background-color: white;
 				justify-content: center;
 				align-items: center;
-				height: 200px;
+				height: 150px;
 				text-align: center;
 			}
 
 			.section-shield .icon-jinggao-copy {
-				font-size: 120px;
+				font-size: 60px;
 				color: #dbdbdb;
 				padding-top: 5px;
 			}
@@ -310,7 +310,7 @@
 			}
 
 			.section-comment-notzan,
-			.section-zan {
+			.section-notzan {
 				/*不点赞*/
 				color: #dbdbdb;
 			}
@@ -444,7 +444,7 @@
 			var pageIndex = 0; //当前页数
 			mui.init();
 			mui.plusReady(function() {
-				//events.closeWaiting();
+				events.closeWaiting();
 				var wd = events.showWaiting();
 				initData();
 				initControl();
@@ -536,7 +536,6 @@
 					}
 					var ids = this.id.split("_")
 					var type = e.target.getAttribute("data-type");
-					//console.log("comment TabId " + ids[1] + ' index ' + ids[2] + ' type ' + type);
 					switch(type) {
 						case "zan":
 						case "notzan":
@@ -546,10 +545,7 @@
 								userId: myStorage.getItem(storageKeyName.PERSONALINFO).utid, //点赞用户ID
 								status: 0 //点赞状态，0 取消点赞，1 点赞
 							};
-							if(type == "zan") {
-								console.log("评论-取消点赞");
-							} else if(type == "notzan") {
-								console.log("评论-点赞");
+							if(type == "notzan") { //评论-点赞
 								comData.status = 1;
 							}
 							commontLikeOrNot(comData, e.target, ids[2]);
@@ -559,13 +555,10 @@
 						case "view_cell": //评论评论
 							var userId; //被评论者的utid
 							if(type == "view_cell") {
-								console.log("评论评论");
 								userId = this.getAttribute('data-UserId');
 							} else if(type == "comment_reply") {
-								console.log("评论回复");
 								userId = e.target.getAttribute("data-UserId");
 							} else if(type = "comment_reply_cell") {
-								console.log("评论回复");
 								userId = e.target.parentNode.getAttribute("data-UserId");
 							}
 							var data = {
@@ -577,7 +570,7 @@
 								replyId: allUserInfo.value[userId].utid,
 								replyNick: allUserInfo.value[userId].unick
 							}
-							console.log("data " + JSON.stringify(data));
+							//console.log("data " + JSON.stringify(data));
 							events.openNewWindowWithData('course_addReply.html', data);
 							break;
 						case "reply_all": //显示所有的评论
@@ -620,6 +613,11 @@
 					events.openNewWindowWithData('course_addReply.html', data);
 					self.disabled = false;
 					jQuery(self).css("pointerEvents", "all");
+				});
+
+				//顶部节次点赞按钮
+				mui('#section_top').on('tap', '.icon-zanzan1', function() {
+					sectionLikeOrNot();
 				});
 
 				//新增评论
@@ -740,18 +738,18 @@
 						if(data.RspData.Data.length != 0) {
 							if(index == 1) {
 								//---假数据---start
-								//																data.RspData.Data[0].SecStatus = 0;
-								//																data.RspData.Data[0].EncType = 2;
-								//																data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
-								//																data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3";
-								//																data.RspData.Data[0].EncLen = 10;
-								//																data.RspData.Data[0].LikeNum = 10;
-								//																data.RspData.Data[1].SecStatus = 0;
-								//																data.RspData.Data[1].EncType = 1;
-								//																data.RspData.Data[1].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
-								//																data.RspData.Data[1].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
-								//																data.RspData.Data[1].EncLen = 10;
-								//																data.RspData.Data[1].LikeNum = 10;
+								//								data.RspData.Data[0].SecStatus = 0;
+								//								data.RspData.Data[0].EncType = 2;
+								//								data.RspData.Data[0].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+								//								data.RspData.Data[0].EncAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1494318853754284.mp3";
+								//								data.RspData.Data[0].EncLen = 10;
+								//								data.RspData.Data[0].LikeNum = 10;
+								//								data.RspData.Data[1].SecStatus = 0;
+								//								data.RspData.Data[1].EncType = 1;
+								//								data.RspData.Data[1].EncImgAddr = "http://qn-kfpb.jiaobaowang.net/jxq/Note/thumb/1495419146278732.png";
+								//								data.RspData.Data[1].EncAddr = "http://qn-cspb.jiaobaowang.net/jbypc/pc/2650720170531145446.mp4";
+								//								data.RspData.Data[1].EncLen = 10;
+								//								data.RspData.Data[1].LikeNum = 10;
 								//---假数据---end
 								showTopData(data.RspData.Data[0], wd);
 							}
@@ -797,9 +795,15 @@
 					document.getElementById("section_comment_list").style.display = "block";
 					document.getElementById("section_top_title").innerHTML = data.SecName;
 					document.getElementById("section_top_content").innerHTML = data.SecNote;
-					document.getElementById("section_top_zan").innerHTML = "(" + data.LikeNum + ")";
 					document.getElementById("section_top_time").innerHTML = "上传时间 : " + data.UpTime.split(" ")[0];
 					document.getElementById("section_comment_list").innerHTML = "";
+					var section_top_zan = document.getElementById("section_top_zan");
+					section_top_zan.innerHTML = "(" + data.LikeNum + ")";
+					if(data.IsLiked) { //节次点赞
+						section_top_zan.className = "mui-icon iconfont icon-zanzan1 section-zan";
+					} else {
+						section_top_zan.className = "mui-icon iconfont icon-zanzan1 section-notzan";
+					}
 					//视频音频区域
 					showOrHiddenVideoAudio(data.EncType, data.EncAddr, data.EncLen);
 					//加载评论列表
@@ -1059,8 +1063,39 @@
 				}
 			}
 
-			function sectionLikeOrNot(data) {
-
+			/**
+			 * 对课程点赞或取消点赞
+			 */
+			function sectionLikeOrNot() {
+				var wd = events.showWaiting();
+				console.log("sectionLikeOrNot sectionId " + sectionId);
+				var commonData = {
+					secId: sectionId,
+					userId: myStorage.getItem(storageKeyName.PERSONALINFO).utid,
+					status: !sectionData.value[sectionId].IsLiked * 1
+				}
+				console.log("commonData " + JSON.stringify(commonData));
+				postDataMCPro_setSecLike(commonData, wd, function(data) {
+					console.log('14 设置某小节的点赞 ' + JSON.stringify(data));
+					if(data.RspCode == 0 && data.RspData.Result == 1) {
+						var section_top_zan = document.getElementById("section_top_zan");
+						if(commonData.status == 0) { //取消赞
+							section_top_zan.className = "mui-icon iconfont icon-zanzan1 section-notzan"
+							sectionData.value[sectionId].IsLiked = 0;
+							sectionData.value[sectionId].LikeNum = sectionData.value[sectionId].LikeNum - 1;
+						} else { //点赞
+							section_top_zan.className = "mui-icon iconfont icon-zanzan1 section-zan";
+							sectionData.value[sectionId].IsLiked = 1;
+							sectionData.value[sectionId].LikeNum = sectionData.value[sectionId].LikeNum + 1;
+						}
+						section_top_zan.innerHTML = "(" + sectionData.value[sectionId].LikeNum + ")";
+						mui.toast('操作成功');
+						wd.close();
+					} else {
+						mui.toast(data.RspTxt);
+						wd.close();
+					}
+				});
 			}
 		</script>
 	</body>
